MediaRecorder: fix typo

It mistakenly said VP8 when it should have said VP9.

BUG=613665, 601636

TBR=emircan@chromium.org

Review-Url: https://codereview.chromium.org/2010413002
Cr-Commit-Position: refs/heads/master@{#396496}

Former-commit-id: 35bb0d816c17ade12088e67a35a2e9e40c403b01